[package]
name = "panduck"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.14.0"
serde = "1.0.132"
serde_json = "1.0.73"
serde_yaml = "0.8.23"

[dependencies.clap]
version = "3.0.0-rc.7"
features = ["derive"]

[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
features = ["markdown"]

