[package]
name = "panduck"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.14.0"
# read configs
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.73"
serde_yaml = "0.8.23"

panduck-html = {version = "0.1", path = "../panduck-html"}
panduck-sycamore = {version = "0.7", path = "../panduck-sycamore"}

[dependencies.clap]
version = "3.0.0-rc.7"
features = ["derive", "unicode"]

[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
features = ["markdown"]

