[package]
name = "panduck"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.16.3"
# read configs
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"

panduck-html = {version = "0.1", path = "../panduck-html"}
panduck-sycamore = {version = "0.7", path = "../panduck-sycamore"}

[dependencies.clap]
version = "4.0.0-rc.2"
features = ["derive", "unicode"]

[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
features = ["markdown"]

