[package]
name = "panduck-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Conversion tool by rust, inspired by pandoc"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
notedown_parser = "0.12.0"
serde = "1.0.130"
serde_json = "1.0.72"
# md, markdown
markdown = { version = "0.3.0", optional = true }
# html
html_parser = { version = "0.6.2", optional = true }
# rtf
rtf-grimoire = { version = "0.1.1", optional = true }
# wiki
parse_wiki_text = { version = "0.1.5", optional = true }
# office
docx-rs = { version = "0.3.1", optional = true }
calamine = { version = "0.18.0", optional = true }


[dev-dependencies]

[features]
default = ["markdown", "html", "office"]
html = ["html_parser"]
rtf = ["rtf-grimoire"]
wiki = ["parse_wiki_text"]
office = ["docx-rs", "calamine"]
