[package]
name = "panduck-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Conversion tool by rust, inspired by pandoc"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.130"
notedown_ast = "0.12.6"


# notedown
notedown_parser = { version = "0.12.0", optional = true }
# jupyter
serde_json = { version = "1.0.72", optional = true }
# md, markdown
markdown = { version = "0.3.0", optional = true }
# html
html_parser = { version = "0.6.2", optional = true }
# rtf
rtf-grimoire = { version = "0.1.1", optional = true }
# wiki
parse_wiki_text = { version = "0.1.5", optional = true }
# office
docx-rs = { version = "0.3.1", optional = true }
calamine = { version = "0.18.0", optional = true }


[dev-dependencies]

[features]
default = ["html"]
notedown = ["notedown_parser"]
html = ["html_parser"]
jupyter = ["serde_json", "markdown"]
rtf = ["rtf-grimoire"]
wiki = ["parse_wiki_text"]

office = ["docx", "excel"]
excel = ["calamine"]
docx = ["docx-rs"]

