[package]
name = "panduck-core"
version = "0.1.3"
authors = ["Aster <192607617@qq.com>"]
description = "Conversion tool by rust, inspired by pandoc"
repository = "https://github.com/oovm/panduck"
documentation = ""
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.132"
notedown_ast = "0.15.7"
notedown-rt = "0.2.0"
yggdrasil-shared = "0.1.5"

# notedown
# notedown_parser = { version = "0.12.0", optional = true }
# jupyter
serde_json = { version = "1.0.73", optional = true }
# md, markdown
# markdown = { version = "0.3.0", optional = true }
pandoc_ast = { version = "0.8.0", optional = true }
comrak = { version = "0.12.1", optional = true }
# html
html_parser = { version = "0.6.2", optional = true }
# rtf
rtf-grimoire = { version = "0.1.1", optional = true }
# rst
rst_parser = { version = "0.4.0", optional = true }
document_tree = { version = "0.4.0", optional = true }
# wiki
parse_wiki_text = { version = "0.1.5", optional = true }
# office
docx-rs = { version = "0.3.2", optional = true }
calamine = { version = "0.18.0", optional = true }

[dev-dependencies]

[features]
default = ["markdown", "html", "jupyter"]
# notedown = ["notedown_parser"]
markdown = ["comrak", "pandoc_ast"]
html = ["html_parser"]
jupyter = ["serde_json", "markdown"]
rtf = ["rtf-grimoire"]
rst = ["rst_parser", "document_tree"]
wiki = ["parse_wiki_text"]

office = ["docx", "excel"]
excel = ["calamine"]
docx = ["docx-rs"]

