[package]
name = "panduck-ebook"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate ebooks"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
]


[dependencies]
notedown_ast = "0.16.1"

[dev-dependencies]
panduck-core = "0.1.3"
