[package]
name = "panduck-html"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.15.7"
html-escape = "0.2.9"
serde = {version = "1.0.132", features = ["derive"]}
merge = "0.1.0"

[dependencies.katex]
version = "0.4.2"
optional = true
default-features = false
features = ["duktape"]


[dependencies.syntect]
version = "4.6.0"
optional = true


[dependencies.panduck-pp]
version = "0.1"
path = "../pretty-print"
features = []

[dev-dependencies.panduck-core]
version = "0.1"
path = "../panduck-core"
features = ["markdown"]

[features]
default = ["katex", "syntect"]
