[package]
name = "panduck-html"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.16.3"
notedown-error = "1.1.10"
html-escape = "0.2.11"
serde = { version = "1.0.144", features = ["derive"] }
merge = "0.1.0"

[dependencies.katex]
version = "0.4.4"
optional = true
default-features = false
features = ["duktape"]


[dependencies.syntect]
version = "5.0.0"
optional = true


[dependencies.panduck-pp]
version = "0"
path = "../pretty-print"
features = []

[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
features = ["markdown"]

[features]
default = ["katex", "syntect"]
