[package]
name = "panduck-jupyter"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate dioxus vdom"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
serde_json = "1.0.115"

[dependencies.notedown-wasi]
version = "0.0.*"
path = 'C:\Users\Dell\CLionProjects\notedown-rs\projects\notedown-wasi'


[features]
default = []
server = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
