[package]
name = "panduck-latex"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Use panduck to generate XeLaTeX"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.16.1"
notedown-error = "1.1.2"
notedown-rt = "0.3.0"

[dependencies.panduck-pp]
version = "0"
path = "../pretty-print"
features = []


[dev-dependencies.panduck-core]
version = "0.1"
path = "../panduck-core"
features = ["markdown"]

