[package]
name = "panduck-latex"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Use panduck to generate XeLaTeX"
repository = "https://github.com/oovm/panduck"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
notedown_ast = "0.16.3"
notedown-error = "1.1.10"
notedown-rt = "0.3.2"
serde = { version = "1.0.144", features = ["derive"] }

[dependencies.panduck-pp]
version = "0"
path = "../pretty-print"
features = []


[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
features = ["markdown"]

