[package]
name = "panduck-online"
version = "0.4.0"
authors = ["Aster <192607617@qq.com>"]
description = "Conversion tool by rust, inspired by pandoc"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"

[dev-dependencies]

[features]
default = []
