[package]
name = "panduck-org-mode"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate dioxus vdom"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown-wasi = { workspace = true }
orgize = "0.10.0-alpha.7"


[features]
default = []
server = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
