[package]
name = "panduck-sycamore"
version = "0.7.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.13.8"

[dependencies.panduck-html]
version = "0.1.0"
path = "../panduck-html"

[dependencies.sycamore]
version = "0.7.0"
features = ["ssr"]

[dependencies.katex]
version = "0.4.2"
optional = true
default-features = false
features = ["duktape"]

[features]
default = ["local"]
local = ["katex"]

[dev-dependencies]
panduck-core = "0.1.2"
