[package]
name = "panduck-sycamore"
version = "0.7.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.14.0"

[dependencies.panduck-html]
version = "0.1.0"
path = "../panduck-html"
default-features = false

[dependencies.sycamore]
version = "0.7.1"
# git = "https://github.com/notedge/sycamore.git"
features = ["ssr"]

[dev-dependencies]
docx-rs = "0.3.2"

[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
features = ["markdown"]

[features]
default = ["local"]
local = ["panduck-html/katex", "panduck-html/syntect", ]


