[package]
name = "panduck-sycamore"
version = "0.7.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.16.3"
notedown-error = "1.1.10"

[dependencies.panduck-html]
version = "0.1.0"
path = "../panduck-html"
default-features = false

[dependencies.sycamore]
version = "0.7.1"
git = "https://github.com/sycamore-rs/sycamore.git"
features = ["ssr"]

[dev-dependencies]
docx-rs = "0.4.3"

[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
features = ["markdown", "html", "rst"]

[features]
default = ["server"]
server = ["panduck-html/katex", "panduck-html/syntect", ]


