[package]
name = "panduck-tectonic"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.14.0"

[dependencies.tectonic]
version = "0.8.0"
# git = "https://github.com/crlf0710/tectonic"

[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
features = ["markdown"]



[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
