[package]
name = "panduck-yew"
version = "0.18.0"
authors = ["Aster <192607617@qq.com>"]
description = "use panduck to generate pdfs"
repository = "https://github.com/oovm/panduck"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
notedown_ast = "0.16.3"
yew = "0.19.3"

[dev-dependencies.panduck-core]
version = "0.1.3"
path = "../panduck-core"
