[package]
name = "panduck-pp"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Pretty print utils for [Panduck](https://github.com/oovm/panduck)."
repository = "https://github.com/oovm/panduck"
documentation = "https://docs.rs/panduck-pp"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
pretty = "0.11.3"

[features]
default = []
